--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -123,7 +123,10 @@
         "bufferobject": "cpp",
         "dense": "cpp",
         "light": "cpp",
-        "lightsource": "cpp"
+        "lightsource": "cpp",
+        "trackballmanipulator": "cpp",
+        "valuemap": "cpp",
+        "valuestack": "cpp"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/g++-11"
 }
