2TCP IK not converge

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -154,7 +154,9 @@
         "texture": "cpp",
         "vertexarraystate": "cpp",
         "buffered_value": "cpp",
-        "callback": "cpp"
+        "callback": "cpp",
+        "block": "cpp",
+        "imagepager": "cpp"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/g++-11"
 }
